<resources>
    <string name="app_name">TwitterFbInstaClone</string>
    <string name="enter_the_email_address">Enter The Email Address</string>
    <string name="enter_the_password">Enter The Password</string>
    <string name="signup">SignUp</string>
    <string name="login">Login</string>
    <string name="todo">TODO</string>
    <string name="checkedtextview">CheckedTextView</string>
</resources>